update thymeleaf templates

--- a/src/main/resources/templates/log.html
+++ b/src/main/resources/templates/log.html
@@ -1,4 +1,4 @@
-<th:block th:include="/_header"></th:block>
+<header th:replace="/_header.html"></header>
 
 	<div class="col-md-12 border p-3">
 		<div class="my-3"><h2>Log Details</h2></div>
@@ -29,4 +29,4 @@
 		
 	</div>
 	
-<th:block th:include="/_footer"></th:block>
+<footer th:replace="/_footer.html"></footer>
