--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -1,4 +1,4 @@
-<th:block th:include="/_header"></th:block>
+<header th:replace="/_header.html"> </header>
 
 		<div class="col-md-12 border p-3">
       		<table class="table table-striped table-hover">
@@ -28,4 +28,4 @@
 	  		</table>
 	  	</div>
 	
-<th:block th:include="/_footer"></th:block>
+<footer th:replace="/_footer.html"></footer>
