--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
-<th:block th:include="/_header"></th:block>
+<header th:replace="/_header.html"></header>
 
 <h6 class="m-5"><a href="/logs">View Logs</a></h6>
 
-<th:block th:include="/_footer"></th:block>
+<footer th:replace="/_footer.html"></footer>
