template resolver and path corrections

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
-<header th:replace="/_header.html"></header>
+<header th:replace="_header"> </header>
 
 <h6 class="m-5"><a href="/logs">View Logs</a></h6>
 
-<footer th:replace="/_footer.html"></footer>
+<footer th:replace="_footer"></footer>
