--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,10 @@
 <header th:replace="_header"> </header>
 
-<h6 class="m-5"><a href="/logs">View Logs</a></h6>
+<div>
+	<h6 class="mx-5 w-auto"><a class="btn btn-outline-dark text-decoration-none" href="/logs">View Logs</a></h6>
+</div>
+<div>
+	<h6 class="mx-5 w-auto"><a class="btn btn-outline-dark text-decoration-none" href="/stock">View Stock data</a></h6>
+</div>
 
 <footer th:replace="_footer"></footer>
