add charts,update table

--- a/src/main/resources/templates/_footer.html
+++ b/src/main/resources/templates/_footer.html
@@ -1,4 +1,15 @@
 		</div>
 	</div>
+
+<footer class="footer mt-auto py-2 bg-light w-100 border-top" style="position:fixed; bottom:0;">
+    <div class="container">
+		<div class="row my-0 col-md-10 m-auto">
+        		<span class="text-muted">Place sticky footer content here.</span>
+        </div>
+    </div>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha3/js/bootstrap.min.js"></script>
+
+
   </body>
 </html>
