--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -12,9 +12,9 @@
 
 		<nav class="navbar navbar-dark bg-dark">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="/">Logs App</a>
+		    <a class="navbar-brand" href="/">Kube App</a>
 		  </div>
 		</nav>
 
-		<div class="container">
-			<div class="row my-2">
+		<div class="container" style="margin-bottom:54px;">
+			<div class="row my-2 col-md-10 m-auto">
