--- a/src/main/resources/templates/stockdata.html
+++ b/src/main/resources/templates/stockdata.html
@@ -10,6 +10,60 @@
 				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 			</div>
 			
+			
+			
+			
+<script th:inline="javascript">
+/*<![CDATA[*/
+    var datalist = /*[[${datalist}]]*/[[]];
+/*]]>*/
+</script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+    google.charts.load('current', {'packages':['line']});
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+
+	var data = new google.visualization.DataTable();
+	data.addColumn('date', 'Day');
+	//data.addColumn('number', 'Opening value');
+	//data.addColumn('number', 'High');
+	//data.addColumn('number', 'Low');
+	data.addColumn('number', 'TCS');
+	//data.addColumn('number', 'Adj Close');
+
+	newlist = datalist;
+	newlist.forEach((x, i) => {
+		x[0] = new Date(x[0])
+	});
+    data.addRows(newlist);
+
+    var options = {
+        chart: {
+          title: 'NSE closing figures for selected IT companies',
+          subtitle: 'in rupees (INR)'
+        },
+        width: 900,
+        height: 500,
+        vAxis: {
+	      scaleType: 'log'
+	    }
+      };
+
+      var chart = new google.charts.Line(document.getElementById('linechart_material'));
+
+      chart.draw(data, google.charts.Line.convertOptions(options));
+    }
+  </script>
+
+  <div  class="my-3 border table table-striped table-hover" id="linechart_material"></div>
+
+
+
+
+			
+			
       		<table th:if="${data.size()}" class="my-3 border table table-striped table-hover">
 
 			  <thead>
