--- a/src/main/resources/templates/_footer.html
+++ b/src/main/resources/templates/_footer.html
@@ -4,7 +4,7 @@
 <footer class="footer mt-auto py-2 bg-light w-100 border-top" style="position:fixed; bottom:0;">
     <div class="container">
 		<div class="row my-0 col-md-10 m-auto">
-        		<span class="text-muted">Place sticky footer content here.</span>
+        		<span class="text-muted text-center">&copy; Maveric Systems. All rights reserved.</span>
         </div>
     </div>
 </footer>
