--- a/src/main/resources/templates/_header.html
+++ b/src/main/resources/templates/_header.html
@@ -12,7 +12,7 @@
 
 		<nav class="navbar navbar-dark bg-dark">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="/">Kube App</a>
+		    <a class="navbar-brand" href="/">App home</a>
 		  </div>
 		</nav>
 
