--- a/src/main/resources/templates/stockdata.html
+++ b/src/main/resources/templates/stockdata.html
@@ -6,7 +6,7 @@
 			</span>
 			
 			<div th:if="${datalist.size()}" class="alert alert-secondary alert-dismissible fade show" role="alert">
-  				<strong th:text="'Showing ' + ${datalist.size()} + ' recent records.'"></strong>
+					<strong th:text="'Showing ' + ${datalist.size()} + ' recent records.'"></strong>
 				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 			</div>
 			
@@ -15,84 +15,85 @@
 			
 <script th:inline="javascript">
 /*<![CDATA[*/
-    var datalist = /*[[${datalist}]]*/[[]];
+	var datalist = /*[[${datalist}]]*/[[]];
 /*]]>*/
 </script>
+
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
-    google.charts.load('current', {'packages':['line']});
-    google.charts.setOnLoadCallback(drawChart);
 
-    function drawChart() {
-
-	var data = new google.visualization.DataTable();
-	data.addColumn('date', 'Time');
-	//data.addColumn('number', 'Opening value');
-	//data.addColumn('number', 'High');
-	//data.addColumn('number', 'Low');
-	data.addColumn('number', 'TCS');
-	//data.addColumn('number', 'Adj Close');
-
-	newlist = datalist;
-	newlist.forEach((x, i) => {
+	datalist.forEach((x, i) => {
 		x[0] = new Date(x[0])
 	});
-    data.addRows(newlist);
+	console.log(datalist);
+	
+	google.charts.load('current', {'packages':['line']});
+	google.charts.setOnLoadCallback(drawChart);
 
-    var options = {
-        chart: {
-          title: 'NSE closing figures for selected IT companies',
-          subtitle: 'in rupees (INR)'
-        },
-        width: 900,
-        height: 500,
-        vAxis: {
-	      scaleType: 'log'
-	    },
-	    hAxis: {
-	      type: 'Time'
-	    }
-      };
+	function drawChart() {
+	
+		var data = new google.visualization.DataTable();
+		data.addColumn('date', 'Time');
+		data.addColumn('number', 'TCS');
+		data.addColumn('number', 'INFY');
+		
+		data.addRows(datalist);
+	
+		var options = {
+			curveType: 'function',
+			chart: {
+				title: 'NSE closing figures for selected IT companies',
+				subtitle: 'in Rupees (INR)',
+				interpolateNulls: true
+			},
+			width: 900,
+			height: 500,
+			vAxis: {
+				scaleType: 'log'
+			},
+			hAxis: {
+				type: 'Time'
+			}
+		};
+	
+		var chart = new google.charts.Line(document.getElementById('linechart_material'));
+		chart.draw(data, google.charts.Line.convertOptions(options));
+	}
+	</script>
 
-      var chart = new google.charts.Line(document.getElementById('linechart_material'));
-
-      chart.draw(data, google.charts.Line.convertOptions(options));
-    }
-  </script>
-
-  <div  class="my-3 border p-3 border-secondary border-1" id="linechart_material"></div>
+	<div	class="my-3 border p-3 border-secondary border-1" id="linechart_material"></div>
 
 
 
 
 			
 			
-      		<table th:if="${datalist.size()}" class="my-3 border table table-striped table-hover border-secondary">
+				<table th:if="${datalist.size()}" class="my-3 border table table-striped table-hover border-secondary">
 
-			  <thead>
-			    <tr>
-			      <th scope="col">Time</th>
-			      <th scope="col">Symbol</th>
-			      <th scope="col">Open</th>
-			      <th scope="col">High</th>
-			      <th scope="col">Low</th>
-			      <th scope="col">Close</th>
-			    </tr>
-			  </thead>
-  
-		    <tbody>
-		        <tr th:each="log : ${data}">
-		        	<!--td><span th:text="${logStat.index}"></span></td-->
-		        	<!--td><span th:text="${log.currentTime}"></span></td-->
-		        	<td><span th:text="${#dates.format(log.currentTime, 'HH:mm:ss a')}"></span></td>
-		            <td><span th:text="${log.StockName}"> </span></td>
-		            <td><span th:text="${log.Open}"> </span></td>
-		            <td><span th:text="${log.High}"> </span></td>
-		            <td><span th:text="${log.Low}"> </span></td>
-		            <td><span th:text="${log.Close}"> </span></td>
-		        </tr>
-		    </tbody>
-	  		</table>
-	  	</div>
+				<thead>
+				<tr>
+					<th scope="col">Time</th>
+					<th scope="col">Symbol</th>
+					<th scope="col">Open</th>
+					<th scope="col">High</th>
+					<th scope="col">Low</th>
+					<th scope="col">Close</th>
+				</tr>
+				</thead>
+	
+			<tbody>
+				<tr th:each="log : ${data}">
+					<!--td><span th:text="${logStat.index}"></span></td-->
+					<!--td><span th:text="${log.currentTime}"></span></td-->
+					<td><span th:text="${#dates.format(log.currentTime, 'HH:mm:ss a')}"></span></td>
+					<td><span th:text="${log.StockName}"> </span></td>
+					<td><span th:text="${log.Open}"> </span></td>
+					<td><span th:text="${log.High}"> </span></td>
+					<td><span th:text="${log.Low}"> </span></td>
+					<td><span th:text="${log.Close}"> </span></td>
+				</tr>
+			</tbody>
+				</table>
+			</div>
 	
 <footer th:replace="_footer"></footer>
