--- a/src/main/resources/templates/stockdata.html
+++ b/src/main/resources/templates/stockdata.html
@@ -29,25 +29,25 @@
 
 		infylist.forEach((x, i) => {
 			d = x[0].split(' ').map(Number);
-			x[0] = new Date(d[0], d[1], d[2], d[3], d[4])
+			x[0] = new Date(d[0], d[1]-1, d[2], d[3], d[4])
+			console.log(x[0] + " -- " + d)
 		});
 		tcslist.forEach((x, i) => {
 			d = x[0].split(' ').map(Number);
-			x[0] = new Date(d[0], d[1], d[2], d[3], d[4])
+			x[0] = new Date(d[0], d[1]-1, d[2], d[3], d[4])
 		});
 
 		function drawChartTcs() {
 			var data = new google.visualization.DataTable();
 			data.addColumn('date', 'Day');
 			data.addColumn('number', 'TCS');
-			//data.addColumn('number', 'Transformers: Age of Extinction');
 	
 			data.addRows(tcslist);
 	
 			var options = {
 				chart: {
 					//interpolateNulls: true,
-					title: 'Current NSE trends - TCS',
+					title: 'Today\'s NSE trends - TCS',
 					subtitle: 'in rupees (INR)'
 				},
 				width: 900,
@@ -68,7 +68,7 @@
 			var options = {
 				chart: {
 					//interpolateNulls: true,
-					title: 'Current NSE trends - Infosys',
+					title: 'Today\'s NSE trends - Infosys',
 					subtitle: 'in rupees (INR)'
 				},
 				width: 900,
